it.ascia.ais.Controller e' una classe astratta che al suo interno ha i metodi per registrare Connector e cercare Device. BusAddress e BusAddressParser non hanno piu' motivo di esistere. I Device hanno ora indirizzi testuali. I Connector devono rispettare la regola del prefisso.